# genopets-magic-eden-listings

./: Cargo.toml  Readme.md  Trunk.toml  index.html
collections/: genopets_recipes.json  genopets_sfts.json
src/: main.rs  trade_summary.rs
src/components/: mod.rs  open_orders.rs  pagination.rs  trade_summary.rs
src/utils/: listings.rs  mod.rs  recipes.rs
